# nfactorial-homeworks

./: pyproject.toml
assignment10-11/: hw.py  hw_bonus.py
assignment12/: hw.py  hw_bonus.py  test_hw.py:Zone.Identifier
assignment14/: pyproject.toml  test_ascii_art.py  test_some.py
assignment16/: hw.py
assignment6/: main.py
assignment7/: hw.py  hw_bonus.py
assignment8/: hw.py  hw_bonus.py
assignment9/: hw.py  hw_bonus.py
hw-15/: hw.py
hw_backend1/: fastapi_meaning_life.py  fastapi_nfactorial.py  server_ping_pong.py  server_request_info.py
hw_backend10/: http_requests.txt  main.py  pyproject.toml
hw_backend12/post_requests/: get_query_string.py  post_form.py  post_json.py  pyproject.toml  transfer_encoding.py
hw_backend12/post_requests/tests/: test_post_requests.py
hw_backend13/: db.sqlite3  manage.py  pyproject.toml
hw_backend13/hw_backend13/: asgi.py  settings.py  urls.py  wsgi.py
hw_backend13/nfactorial/: urls.py  views.py
hw_backend14/: pyproject.toml
hw_backend14/news_project/: db.sqlite3
hw_backend14/news_project/news/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
hw_backend14/news_project/news/migrations/: 0001_initial.py  0002_alter_news_title.py  0003_comment.py  0004_alter_news_title.py
hw_backend14/news_project/news/templates/news/: base.html  comment_form.html  detail.html  news_create.html  news_detail.html  news_edit.html  news_list.html
hw_backend14/news_project/news_project/: settings.py  urls.py
hw_backend15, 16, 17/: db.sqlite3
hw_backend15, 16, 17/news/: apps.py  tests.py
hw_backend15, 16, 17/templates/: base.html  index.html
hw_backend15/news/: admin.py  models.py  views.py
hw_backend15/news_project/: settings.py  urls.py
hw_backend2/: main.py  pyproject.toml
hw_backend2/cars_project/: pyproject.toml
hw_backend3/: main.py  pyproject.toml
hw_backend4/: main.py
hw_backend4-5/: main.py  pyproject.toml
hw_backend4-5/templates/books/: detail.html  edit.html  list.html
hw_backend6/: auth.py  db.py  main.py  models.py  pyproject.toml
hw_backend6/routers/: auth_routes.py  cart_routes.py  flowers_routes.py
hw_backend7/: db.py  main.py  models.py  pyproject.toml  repositories.py
hw_backend7-8/: alembic.ini  auth.py  database.py  main.py  models.py  pyproject.toml  repositories.py
hw_backend7/routers/: endpoints.py
hw_backend7/templates/auth/: login.html  profile.html  signup.html
hw_backend7/templates/cart/: list.html
hw_backend7/templates/flowers/: list.html  purchased.html
(+33 files in other folders)
