[tool.poetry]
name = "assignment14"
version = "0.1.0"
description = ""
authors = ["nurbolat <n.satybaldi2003@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
