[tool.poetry]
name = "hw_backend14"
version = "0.1.0"
description = ""
authors = ["nurbolat <n.satybaldi2003@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.10"
Django = "^5.1.7"
django-debug-toolbar = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
