[tool.poetry]
name = "Books"
version = "0.1.0"
description = "Books read and create"
authors = ["nurbolat <n.satybaldi2003@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
Jinja2 = "^3.1.5"
python-multipart = "^0.0.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
