[tool.poetry]
name = "post_requests"
version = "0.1.0"
description = ""
authors = ["nurbolat <n.satybaldi2003@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
